--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,11 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['master']
+    branches:
+      - master
+      - main
+    tags:
+      - '*'
 
 env:
   REGISTRY: ghcr.io
@@ -40,6 +44,8 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
