--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,3 +48,15 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  clean-ghcr:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Delete untagged containers older than a week
+        uses: snok/container-retention-policy@v1
+        with:
+          image-names: '*'
+          cut-off: A week ago UTC
+          keep-at-least: 1
+          untagged-only: true
+          token: ${{ secrets.PAT }}
