--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Delete untagged containers older than a week
         uses: snok/container-retention-policy@v1
         with:
-          image-names: *
+          image-names: ${{ env.IMAGE_NAME }}
           cut-off: A week ago UTC
           keep-at-least: 1
           untagged-only: true
