--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,48 @@
-name: Release
+name: Bump version and Create release
 
-on: 
-  push:
-    tags:
-    - '*'
+# see https://github.com/marketplace/actions/github-tag-bump
+on:
+  pull_request:
+    types:
+      - closed
+    branches:
+      - master
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
     steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
 
-    - uses: actions/checkout@v3
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
+          WITH_V: true
+          PRERELEASE: true
+          DEFAULT_BUMP: patch
 
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        tar czvf release.tgz README.md
+      - name: Create release artifacts
+        run: |
+          tar czvf release.tar.gz README.md
 
-    - uses: ncipollo/release-action@v1
-      with:
-        artifacts: "release.tar.gz,*.md"
-        bodyFile: "README.md"
+      # - uses: ncipollo/release-action@v1
+      #   with:
+      #     artifacts: "release.tar.gz"
+      #     bodyFile: "README.md"
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            bashrc
+            *.tar.gz
