--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
@@ -25,9 +25,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
           WITH_V: true
-          PRERELEASE: true
+          PRERELEASE: false
           DEFAULT_BUMP: patch
-          DEFAULT_BRANCH: master
+          # DEFAULT_BRANCH: master
           INITIAL_VERSION: 0.1.0
 
       # - uses: actions/checkout@v3
