--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,18 @@
-name: Bump version and Create release
+name: "tagged-release"
 
-# see https://github.com/marketplace/actions/github-tag-bump
 on:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - master
+  push:
+    tags:
+      - "v*"
 
 jobs:
-  build:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: write
+  tagged-release:
+    name: "Tagged Release"
+    runs-on: "ubuntu-latest"
+
     steps:
+
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: '0'
-
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
-          WITH_V: true
-          PRERELEASE: false
-          DEFAULT_BUMP: patch
-          # DEFAULT_BRANCH: master
-          INITIAL_VERSION: 0.1.0
-
-      # - uses: actions/checkout@v3
 
       - name: Create release artifacts
         run: |
