--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -31,19 +31,23 @@ jobs:
 
       # - uses: actions/checkout@v3
 
-      # - name: Create release artifacts
-      #   run: |
-      #     tar czvf release.tar.gz README.md
+      - name: Create release artifacts
+        run: |
+          tar czvf release.tar.gz README.md
 
       # - uses: ncipollo/release-action@v1
       #   with:
       #     artifacts: "release.tar.gz"
       #     bodyFile: "README.md"
 
-      # - uses: "marvinpinto/action-automatic-releases@latest"
-      #   with:
-      #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-      #     prerelease: false
-      #     files: |
-      #       bashrc
-      #       *.tar.gz
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          # prerelease: false
+          automatic_release_tag: 'latest'
+          prerelease: true
+          title: 'Development Build'
+          files: |
+            bashrc
+            *.tar.gz
+
