--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -28,6 +28,7 @@ jobs:
           DEFAULT_BUMP: patch
           # DEFAULT_BRANCH: master
           INITIAL_VERSION: 0.1.0
+        id: bump
 
       # - uses: actions/checkout@v3
 
@@ -43,10 +44,9 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          # prerelease: false
-          automatic_release_tag: 'latest'
-          prerelease: true
-          title: 'Development Build'
+          prerelease: false
+          automatic_release_tag: ${{ steps.bump.outputs.new_tag }}
+          # title: 'Development Build'
           files: |
             bashrc
             *.tar.gz
