--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -6,6 +6,10 @@ on:
       - closed
     branches:
       - master
+  push:
+
+env:
+  BUILD: ${{ github.event.pull_request.merged == true && "release" || "snapshot" }}
 
 jobs:
   build:
@@ -14,12 +18,23 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Debug output
+        run: |
+          echo "- GITHUB_REF: $GITHUB_REF" >> $GITHUB_STEP_SUMMARY
+          echo "- GITHUB_SHA: $GITHUB_SHA" >> $GITHUB_STEP_SUMMARY
+          echo "- Merge Commit SHA: ${{ github.event.pull_request.merge_commit_sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "- MERGE_COMMIT_SHA: $MERGE_COMMIT_SHA" >> $GITHUB_STEP_SUMMARY
+          echo "- BUILD: $BUILD" >> $GITHUB_STEP_SUMMARY
+        env:
+          MERGE_COMMIT_SHA: ${{ github.event.pull_request.merge_commit_sha }}
+
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
 
       - name: Bump version and push tag
+        if: ${{ github.event.pull_request.merged == true }}
         uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
@@ -32,9 +47,9 @@ jobs:
 
       # - uses: actions/checkout@v3
 
-      - name: Create release artifacts
+      - name: Create build artifacts
         run: |
-          tar czvf release.tar.gz README.md
+          tar czvf out.tar.gz README.md
 
       # - uses: ncipollo/release-action@v1
       #   with:
@@ -45,7 +60,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
-          automatic_release_tag: ${{ steps.bump.outputs.new_tag }}
+          automatic_release_tag: ${{ github.event.pull_request.merged == true && steps.bump.outputs.new_tag || "development" }}
           # title: 'Development Build'
           files: |
             bashrc
