--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -7,6 +7,8 @@ on:
     branches:
       - master
   push:
+    branches:
+      - '*'
 
 env:
   BUILD: ${{ github.event.pull_request.merged == true && 'release' || 'snapshot' }}
