--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -84,7 +84,7 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=development,enable={{if is_default_branch}}false{{else}}true{{/if}}
+            type=raw,value=development,enable=${{is_default_branch && 'false' || 'true'}}
             type=schedule
 
       - name: Build and push Docker image
