--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -8,6 +8,9 @@ on:
       - master
 
   push:
+    branches-ignore:
+      - master
+
 
   schedule:
   - cron: "43 5 * * 1"
@@ -55,13 +58,16 @@ jobs:
           echo "- Merge Commit SHA: ${{ github.event.pull_request.merge_commit_sha }}" >> $GITHUB_STEP_SUMMARY
           echo "- MERGE_COMMIT_SHA: $MERGE_COMMIT_SHA" >> $GITHUB_STEP_SUMMARY
           echo "- BUILD: $BUILD" >> $GITHUB_STEP_SUMMARY
-          echo "- VERSION: $VERSION" >> $GITHUB_STEP_SUMMARY
+          VERSIONNUM=${VERSION#v}
+          echo "- VERSION: $VERSION ($VERSIONNUM)" >> $GITHUB_STEP_SUMMARY
+          echo "VERSIONNUM=$VERSIONNUM" >> $GITHUB_ENV
+
         env:
           MERGE_COMMIT_SHA: ${{ github.event.pull_request.merge_commit_sha }}
           VERSION: ${{ github.event.pull_request.merged == true && steps.bump.outputs.new_tag || '0.0.1' }}
 
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # - name: Checkout repository
+      #   uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -100,7 +106,7 @@ jobs:
           helm package --version $VERSION --app-version $VERSION helm-chart/
           mv mpd-dlna-yamaha-avr-*.tgz mpd-dlna-yamaha-avr--helm-chart.tgz
         env:
-          VERSION: ${{ github.event.pull_request.merged == true && steps.bump.outputs.new_tag || '0.0.1' }}
+          VERSION: ${{ github.event.pull_request.merged == true && env.VERSIONNUM || '0.0.1' }}
 
       # - uses: actions/upload-artifact@v3
       #   with:
