--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,68 +1,68 @@
-name: Create and Publish Docker Image to ghcr.io
+# name: Create and Publish Docker Image to ghcr.io
 
-on:
-  push:
-    branches:
-      - main
-      - master
-    tags:
-      - '*'
+# on:
+#   push:
+#     branches:
+#       - main
+#       - master
+#     tags:
+#       - '*'
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+# env:
+#   REGISTRY: ghcr.io
+#   IMAGE_NAME: ${{ github.repository }}
 
-jobs:
-  build-and-push-image:
-    if: ${{ false }}
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+# jobs:
+#   build-and-push-image:
+#     if: ${{ false }}
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#       packages: write
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Log in to the Container registry
+#         uses: docker/login-action@v2
+#         with:
+#           registry: ${{ env.REGISTRY }}
+#           username: ${{ github.actor }}
+#           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
+#       - name: Extract metadata (tags, labels) for Docker
+#         id: meta
+#         uses: docker/metadata-action@v4
+#         with:
+#           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+#           tags: |
+#             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#       - name: Build and push Docker image
+#         uses: docker/build-push-action@v3
+#         with:
+#           context: .
+#           push: true
+#           tags: ${{ steps.meta.outputs.tags }}
+#           labels: ${{ steps.meta.outputs.labels }}
 
 
-  clean-ghcr:
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
+#   clean-ghcr:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       packages: write
 
-    steps:
-      - name: Delete untagged containers older than a week
-        uses: snok/container-retention-policy@v1
-        with:
-          image-names: ${{ env.IMAGE_NAME }}
-          cut-off: A week ago UTC
-          keep-at-least: 1
-          untagged-only: true
-          account-type: personal
-          token: ${{ secrets.GITHUB_TOKEN }}
+#     steps:
+#       - name: Delete untagged containers older than a week
+#         uses: snok/container-retention-policy@v1
+#         with:
+#           image-names: ${{ env.IMAGE_NAME }}
+#           cut-off: A week ago UTC
+#           keep-at-least: 1
+#           untagged-only: true
+#           account-type: personal
+#           token: ${{ secrets.GITHUB_TOKEN }}
