--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: "ghcr.io/matgoebl/mpd-dlna-yamaha-avr"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "add_deployment"
+  # tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
