--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -26,6 +26,7 @@ env:
 jobs:
   build:
     name: Build and Release
+    if: github.event.pull_request.merged == true || github.ref != 'refs/heads/master'
     runs-on: ubuntu-22.04
     permissions:
       contents: write
