--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
     name: Build and Release
-    if: github.event.pull_request.merged == true || ( github.github.event_name == 'push' && github.event.push.ref != 'refs/heads/master' )
+    if: github.event.pull_request.merged == true || ( github.event_name == 'push' && github.event.push.ref != 'refs/heads/master' )
     runs-on: ubuntu-22.04
     permissions:
       contents: write
