--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           PRERELEASE: false
-          DEFAULT_BUMP: patch
+          DEFAULT_BUMP: minor
           INITIAL_VERSION: 1.0.0
 
       - name: Set version and output info
