--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -3,7 +3,8 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: "ghcr.io/matgoebl/mpd-dlna-yamaha-avr"
+#  repository: "ghcr.io/matgoebl/mpd-dlna-yamaha-avr"
+  repository: "ghcr.io/matgoebl/test"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
